force-app/main/default/objects/AccountContactRelation/fields/Account_Name_Test__c.field-meta.xml
<CustomField>
    <fullName>Account_Name_Test__c</fullName>
    <formula>Account.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Name Test</label>
    <type>Text</type>
</CustomField>