force-app/main/default/objects/AccountContactRelation/fields/Associated_BIA_Contact__c.field-meta.xml
<CustomField>
    <fullName>Associated_BIA_Contact__c</fullName>
    <defaultValue>true</defaultValue>
    <description>This is an indicator that this Contact associated to this BIA?</description>
    <inlineHelpText>This is an indicator that this Contact associated to this BIA?</inlineHelpText>
    <label>Associated BIA Contact</label>
    <type>Checkbox</type>
</CustomField>