force-app/main/default/objects/AccountContactRelation/fields/BIA_Eligibility__c.field-meta.xml
<CustomField>
    <fullName>BIA_Eligibility__c</fullName>
    <description>The Eligibility of the Contact within the BIA</description>
    <inlineHelpText>The Eligibility of the Contact within the BIA</inlineHelpText>
    <label>BIA Eligibility</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Property Owner</fullName>
            </value>
            <value>
                <fullName>Business Tenant</fullName>
            </value>
            <value>
                <fullName>Representative</fullName>
            </value>
            <value>
                <fullName>N/A (Staff)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>