force-app/main/default/objects/AccountContactRelation/fields/BIA_Position__c.field-meta.xml
<CustomField>
    <fullName>BIA_Position__c</fullName>
    <description>The position of the Contact within the BIA</description>
    <inlineHelpText>The position of the Contact within the BIA</inlineHelpText>
    <label>BIA Position</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Board Member</fullName>
            </value>
            <value>
                <fullName>Chair</fullName>
            </value>
            <value>
                <fullName>Vice-Chair</fullName>
            </value>
            <value>
                <fullName>Co-Chair</fullName>
            </value>
            <value>
                <fullName>Secretary</fullName>
            </value>
            <value>
                <fullName>Treasurer</fullName>
            </value>
            <value>
                <fullName>Staff</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>