force-app/main/default/objects/AccountContactRelation/fields/Main_BIA_Contact__c.field-meta.xml
<CustomField>
    <fullName>Main_BIA_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This is an indicator that the contact is the main point of contact for this BIA</description>
    <inlineHelpText>This is an indicator that the contact is the main point of contact for this BIA</inlineHelpText>
    <label>Main BIA Contact</label>
    <type>Checkbox</type>
</CustomField>