force-app/main/default/objects/AccountContactRelation/fields/Role_Formula__c.field-meta.xml
<CustomField>
    <fullName>Role_Formula__c</fullName>
    <description>This formula field is used to hold default Role value for Account Contact Relationship record if no role is specified</description>
    <formula>IF(AND(ISBLANK(TEXT(Role__c)), IsDirect),&#39;Primary&#39;,
IF(NOT(ISBLANK(TEXT(Role__c))),Text(Role__c),&#39;Secondary&#39;
))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This formula field is used to hold default Role value for Account Contact Relationship record if no role is specified</inlineHelpText>
    <label>Role</label>
    <type>Text</type>
</CustomField>